added viewmodel with sharedpreference

--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,11 @@ buildscript {
 allprojects {
     repositories {
         google()
+        jcenter()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        maven {
+            url "https://dl.bintray.com/andreyberyukhov/FlowReactiveNetwork"
+        }
     }
 }
 
